BTWCT-7956: Fixed, form spacing top and bottom

--- a/waters-aem-frontend/src/styles/forms.scss
+++ b/waters-aem-frontend/src/styles/forms.scss
@@ -621,3 +621,10 @@
         margin-bottom: 0px;
     }
 }
+
+#js-contact-support-form {
+    .cmp-form {
+        display: inline-block;
+        margin-bottom: 0px;
+    }
+}
